--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -14,3 +14,6 @@
     <input type="text" [(ngModel)]="count">
     <span class="psw">Count : {{count}} </span>
   </div>
+    <div>
+        <app-servers></app-servers>
+    </div>
