--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,19 +1,24 @@
-
-
-<div class="imgcontainer">
-    <h1 >{{title}}</h1>
+<div class="container">
+      <div class="row">
+          <div class="col-md-12">
+  
+      <h3>{{title}}</h3>
+          </div>
+      </div>
+    <div class="row">
+        <div class="col-md-1">
+            <button type="button" class="cancelbtn" (click)="clickSub()">-</button>
+              </div>
+      <div class="col-md-10">
+          <input type="text" [(ngModel)]="count" style="text-align: center">
+        </div>
+        <div class="col-md-1" >
+            <button type="button" class="plusbtn" (click)="clickAdd()">+</button>          
+        </div>
   </div>
-
-  <div class="container">
-    
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn" (click)="clickAdd()">+</button>
-    <button type="button" class="cancelbtn" (click)="clickSub()">-</button>
-    <input type="text" [(ngModel)]="count">
     <span class="psw">Count : {{count}} </span>
+
   </div>
-    <div>
+    <div  class="container">
         <app-servers></app-servers>
     </div>
