--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -1,13 +1,20 @@
-h1 {
+h3 {
     color: #2E4977;
     font-family: Arial, Helvetica, sans-serif;
-    
-    font-size: 250%;
+    text-align: center;
+    font-size:30px;
+    animation-name: h3;
+    animation-duration: 8s;
   }
+ 
+@keyframes h3 {
+  from{color: #ffffff;}
+  to {color: #2E4977;}
+}
 div{
-    background-color:  lightblue;
-    color: #883139;
-    font-size: 150%;
+    background-color:  #ffffff;
+    color: #0B0203;
+    font-size: 100%;
 }
 
 /* Bordered form */
@@ -17,23 +24,24 @@ form {
 
 /* Full-width inputs */
 input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
+    margin-top: 8px;
+    border: 1px solid #ADA4A4;
     box-sizing: border-box;
+    border-radius: 5px;
+    width: 100%;
+    height: 50px;
 }
 
 /* Set a style for all buttons */
 button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    background-color: #BECCD6;
+    color: #655d5d;
+    margin: 8px;
     border: none;
     cursor: pointer;
+    height: 50px;
     width: 100%;
+    border-radius: 5px;
 }
 
 /* Add a hover effect for buttons */
@@ -43,9 +51,20 @@ button:hover {
 
 /* Extra style for the cancel button (red) */
 .cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
+    width: 100%;
+    margin-left: 5px;
+    float: left;
+}
+.plusbtn {
+    width: 100%;
+    margin-right: 5px;
+    float: right;
+}
+.cancelbtn:hover, .plusbtn:hover{
+    border-color: #48ABF3;
+    border-style: solid;
+    color: #100F0F;
+    width: 110%;
 }
 
 /* Center the avatar image inside this container */
@@ -62,13 +81,22 @@ img.avatar {
 
 /* Add padding to containers */
 .container {
-    padding: 16px;
+    padding: 10px;
+    border-style: unset;
+    margin-top: 10px;
+    padding-top:5px;
+    background-color: #E6E9EA;
+    border-radius: 5px;
 }
 
 /* The "Forgot password" text */
 span.psw {
     float: right;
     padding-top: 16px;
+}
+.row{
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
