--- a/my-app/src/app/servers/servers.component.css
+++ b/my-app/src/app/servers/servers.component.css
@@ -1,14 +1,9 @@
 h1 {
     color: #2E4977;
     font-family: Arial, Helvetica, sans-serif;
-    
     font-size: 250%;
   }
-div{
-    background-color:  lightblue;
-    color: #883139;
-    font-size: 150%;
-}
+
 
 /* Bordered form */
 form {
@@ -17,20 +12,21 @@ form {
 
 /* Full-width inputs */
 input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
+    margin: 3px;
+    border: 1px solid #ADA4A4;
     box-sizing: border-box;
+    border-radius: 5px;
+    width: 100%;
+    height: 50px;
+    text-align: center;
 }
 
 /* Set a style for all buttons */
 button {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #BECCD6;
+    color: #655d5d;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin:3px;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -45,7 +41,6 @@ button:hover {
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
-    background-color: #f44336;
 }
 
 /* Center the avatar image inside this container */
@@ -60,15 +55,17 @@ img.avatar {
     border-radius: 50%;
 }
 
-/* Add padding to containers */
-.container {
-    padding: 16px;
-}
-
 /* The "Forgot password" text */
 span.psw {
     float: right;
     padding-top: 16px;
+}
+.row{
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.container-fluid{
+    background-color: #E6E9EA;
 }
 
 /* Change styles for span and cancel button on extra small screens */
